Added new env vars

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,7 @@ API_URL:
 AUTH_HEADER:
 INSTAGRAM_APP_ID:
 INSTAGRAM_REDIRECT_URI:
+SPOTIFY_CLIENT_ID:
+SPOTIFY_CLIENT_SECRET:
+SPOTIFY_REDIRECT_URI:
+SPOTIFY_USER_ID:
