Removed many things and moved to API

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,1 @@
-API_URL:
-AUTH_HEADER:
-INSTAGRAM_APP_ID:
-INSTAGRAM_REDIRECT_URI:
-SPOTIFY_CLIENT_ID:
-SPOTIFY_CLIENT_SECRET:
-SPOTIFY_REDIRECT_URI:
-SPOTIFY_USER_ID:
+REACT_APP_API_URL:
