--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-loader-spinner": "^3.1.3",
     "@types/react-router-dom": "^5.1.4",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.2",
@@ -25,6 +26,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "source-map-loader": "^0.2.4",
