--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,54 @@
-{
-  "env": {
-    "browser": true,
-    "es6": true
+module.exports = {
+  env: {
+    browser: true,
+    es2021: true,
   },
-  "extends": ["prettier", "airbnb-base"],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+  extends: [
+    'airbnb',
+    'airbnb-typescript',
+    'airbnb/hooks',
+    'plugin:@typescript-eslint/recommended',
+    'plugin:@typescript-eslint/recommended-requiring-type-checking',
+    'prettier',
+  ],
+  parser: '@typescript-eslint/parser',
+  parserOptions: {
+    ecmaFeatures: {
+      jsx: true,
     },
-    "ecmaVersion": 2018,
-    "sourceType": "module"
+    sourceType: 'module',
+    project: './tsconfig.json',
   },
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": "error"
-  }
-}
+  plugins: ['react', '@typescript-eslint'],
+  rules: {
+    'no-return-await': 'off',
+    '@typescript-eslint/return-await': 'error',
+    '@typescript-eslint/no-floating-promises': ['error', { ignoreIIFE: true }],
+    '@typescript-eslint/restrict-template-expressions': 'off',
+    'react/jsx-props-no-spreading': 'off',
+  },
+  globals: {
+    React: 'readable',
+  },
+  settings: {
+    'import/resolver': {
+      typescript: {},
+    },
+  },
+  overrides: [
+    {
+      files: ['.*.ts', '*.tsx'],
+      rules: {
+        'react/require-default-props': 'off',
+        'default-case': 'off',
+        'consistent-return': 'off',
+      },
+    },
+    {
+      files: ['*.ts'],
+      rules: {
+        'import/prefer-default-export': 'off',
+      },
+    },
+  ],
+};
