--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,32 @@
 {
   "compilerOptions": {
     "outDir": "./build",
-    "allowJs": true,
+    "strict": true,
     "target": "es5",
+    "baseUrl": "src",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
+    "allowJs": true,
+    "checkJs": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "noEmit": true,
+    "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "jsx": "preserve",
+    "allowSyntheticDefaultImports": true
   },
   "include": [
-    "./src/**/*"
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
